tests/frontend_syntax/invalid/bad_stmt_expr.vit
space vitte/compiler/frontend/tests

proc broken(value: int) -> int {
  let = value;
  give value;
}
